--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,5 +15,4 @@ jobs:
         python-version: 3.7
     - name: Test with pytest
       run: |
-        pip install pytest
-        pytest
+        python3 webss.py
